--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #redis config
 spring.cache.type=redis
 #default:
-#spring.redis.host=localhost
-#spring.redis.port=6379
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
